<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:paddingTop="30dp"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="10dp"
            android:src="@drawable/back"
            android:contentDescription="戻る"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/shake_test_result"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtIcon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:text="✓"
        android:textSize="90sp"
        android:gravity="center"
        android:textColor="#000000"
        android:background="@drawable/circle_border" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_problem"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"
        android:paddingTop="30dp" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection_stable"
        android:textSize="18sp"
        android:textColor="#000000"
        android:gravity="center"
        android:paddingTop="40dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/save"/>

</LinearLayout>