<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:src="@drawable/back"
        android:contentDescription="戻る"/>

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/battery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <!-- Cable Image -->
    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/cable"/>

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shake_test"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shake_test_description"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <!-- Start Button -->
    <Button
        android:id="@+id/btnDiagnosis"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/diagnosis_start"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <!-- Space -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

<!--    &lt;!&ndash; Bottom Navigation &ndash;&gt;-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="70dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="center">-->

<!--        <Button-->
<!--            android:id="@+id/btnHome"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Home"/>-->

<!--        <Button-->
<!--            android:id="@+id/btnHistory"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="履歴"/>-->

<!--        <Button-->
<!--            android:id="@+id/btnSetting"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="設定"/>-->
<!--    </LinearLayout>-->

</LinearLayout>